# PokemonAI

./: .gitignore  LICENSE  config.example.yaml  pyproject.toml
showdown_scraper/: __init__.py  api.py  cli.py  config.py  scraper.py  storage.py  utils.py
showdown_scraper/db/: __init__.py  database.py  models.py  schema.py
